# gently-annotator

./: .gitignore  config.yaml  diag_t1.py  pyproject.toml  start.bat  start.ps1  start.sh
annotator/: annotations.py  catalog.py  json_sidecar.py  prebake.py  preview_cache.py  server.py  volume_io.py
annotator/routes/: annotations.py  catalog.py  prebake.py  volume.py
static/: index.html
static/css/: main.css
static/js/: api.js  app.js  viewer.js
tests/: test_annotations.py  test_catalog.py  test_preview_cache.py  test_volume_io.py
